Updated spelling of 'contributers'
... to 'contributors'

--- a/contributors.html
+++ b/contributors.html
@@ -4,7 +4,7 @@ layout: page
 
 <h1 class="title">Contributors</h1>
 
-<p class="lede">Resources on this site have been by the following contributers:</p>
+<p class="lede">Resources on this site have been by the following contributors:</p>
 
 <ul id="people" class="people"></ul>
 
